--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.8.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
